2005-02-02 Knud Woehler <knud.woehler@microplex.de>

	* src/ide_disk.c: Check the device is not busy before sending a
	command to the device. 
	
2004-10-17 Iztok Zupet <iz@elsis.si>

	* include/ide_disk.h : moved to ->
	* src/ide_disk.h: because this is a private include file
		
	* cdl/ide_disk.cdl: define CYGDAT_DEVS_DISK_IDE_SECTOR_SIZE there.
	* src/ide_disk.c: use the CDL defined sector size


2004-10-16 Iztok Zupet <iz@elsis.si>

        * cdl/ide_disk.cdl:
        * src/ide_disk.c:
        * include/ide_disk.h:
        A generic IDE disk device driver



//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Red Hat, Inc.
// Copyright (C) 2004 eCosCentric, Ltd.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public
// License. However the source code for this file must still be made available